# tac_bootstrap_cli

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CLI_ROADMAP_100PERCENT.md  FIX_GITHUB_ES.md  GITHUB_FIX_SUMMARY.md  MODEL_CONFIGURATION.md  Makefile  PLAN_TAC_BOOTSTRAP.md  QUICK_START_GITHUB_FIX.md  README.md  canonical_idk.yml  config.yml  playwright-mcp-config.json  review_report.json
apps/orchestrator_3_stream/backend/: .env.sample  README.md  dependencies.py  logger.py  main.py  pyproject.toml
apps/orchestrator_3_stream/backend/modules/: agent_manager.py  autocomplete_agent.py  autocomplete_models.py  config.py  database.py  orchestrator_service.py  single_agent_prompt.py  slash_command_parser.py  websocket_manager.py
tac_bootstrap_cli/: .env.example  .gitignore  LICENSE  Makefile  PLAN_COMPLETAR_CLI.md  README.md  pyproject.toml
tac_bootstrap_cli/docs/: agents.md  commands.md  hooks.md  output-styles.md  utilities.md
tac_bootstrap_cli/tac_bootstrap/: __init__.py  __main__.py
tac_bootstrap_cli/tac_bootstrap/application/: ai_generator.py  community_service.py  detect_service.py  docs_generator.py  doctor_service.py  entity_generator_service.py  exceptions.py  generate_service.py  learning_service.py  metrics_service.py  migration_service.py  plugin_service.py  recommendation_service.py  scaffold_service.py  search_service.py  security_service.py  snapshot_service.py  team_service.py  template_store_service.py  test_generator.py  upgrade_service.py  validation_service.py
tac_bootstrap_cli/tac_bootstrap/domain/: __init__.py  entity_config.py  exceptions.py  migrations.py  models.py  plan.py  plugin.py  security.py  validators.py  value_objects.py
tac_bootstrap_cli/tac_bootstrap/infrastructure/: docs_templates.py  fs.py  git_adapter.py  i18n.py  plugin_loader.py  telemetry.py  template_repo.py  template_store.py  ui_components.py  web_server.py
tac_bootstrap_cli/tac_bootstrap/interfaces/: cli.py  entity_wizard.py  wizard.py
tac_bootstrap_cli/tac_bootstrap/locales/: de.json  en.json  es.json  fr.json  ja.json  zh.json
tac_bootstrap_cli/tac_bootstrap/templates/: CHANGELOG.md.j2  Makefile.j2  __init__.py
tac_bootstrap_cli/tests/: test_application_exceptions.py  test_authorized_templates.py  test_base_classes_templates.py  test_cli.py  test_cli_generate.py  test_cli_generate.py.bak  test_crud_templates.py  test_detect_service.py  test_docs_generator.py  test_doctor_service.py  test_entity_config.py  test_entity_generator_service.py  test_entity_wizard.py  test_fractal_docs_templates.py  test_fs.py  test_generate_service.py  test_migration_service.py  test_models.py  test_new_tac10_templates.py  test_orch_database_models.py  test_phase3_premium.py  test_plan.py  test_plugin_system.py  test_prime_cc_template.py  test_scaffold_service.py  test_security_service.py  test_telemetry_service.py  test_template_repo.py  test_template_store.py  test_test_generator.py  test_trigger_templates.py  test_ui_components.py  test_upgrade_cli.py  test_upgrade_service.py  test_validation_service.py  test_validation_system_requirements.py  test_validators.py  test_value_objects.py  test_version.py  test_wizard.py
(+1887 files in other folders)
