[project]
name = "tac-bootstrap"
version = "0.9.4"
description = "CLI to bootstrap Agentic Layer for Claude Code with TAC patterns"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TAC Bootstrap Team"}
]
keywords = ["claude", "ai", "cli", "bootstrap", "agentic"]
dependencies = [
    "typer>=0.9.4",
    "rich>=13.7.0",
    "jinja2>=3.1.2",
    "pydantic>=2.5.0,<2.10",
    "pyyaml>=6.0.1",
    "packaging>=23.0", # Para comparación de versiones
    "gitpython>=3.1.0",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
tac-bootstrap = "tac_bootstrap.interfaces.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["import-untyped", "misc"]
ignore_missing_imports = true
no_incremental = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]
